--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,66 @@
+.wrapper {
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(#209688 15%, #dadbd4 15% 100%);
+  padding: 20px 0;
+}
 
+.app-container {
+  width: 100%;
+  height: calc(100vh - 40px);
+  border: 1px solid black;
+  background-color: lightgray;
+}
+
+.boolzapp {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+}
+
+.chat-list {
+  width: 30%;
+  height: 100%;
+  border: 1px solid red;
+}
+
+.chat-list__header {
+  height: 10%;
+  background-color: lightblue;
+}
+
+.chat-list__alert {
+  height: 10%;
+  background-color: lightcoral;
+}
+
+.chat-list__input {
+  height: 10%;
+}
+
+.chat-list__chats {
+  height: 70%;
+  background-color: lightgreen;
+}
+
+.active-chat {
+  width: 70%;
+  height: 100%;
+  border: 1px solid yellow;
+}
+
+.active-chat__header {
+  height: 10%;
+  background-color: lightblue;
+}
+
+.active-chat__body {
+  height: 80%;
+  background-color: lightpink;
+}
+
+.active-chat__input {
+  height: 10%;
+  background-color: lightgreen;
+}
