--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,8 @@ img {
   margin: 10px 0;
   border-radius: 10px;
 
+  display: flex;
+
   position: relative;
 }
 
@@ -253,4 +255,13 @@ img {
   position: absolute;
   right: 5px;
   bottom: 5px;
+}
+
+.dropdown {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+
+  padding-right: 5px;
+  cursor: pointer;
 }
