--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ img {
 
 /* # SECTIONS */
 
-/* Generals */
+/** Generals */
 .wrapper {
   width: 100%;
   height: 100vh;
@@ -27,20 +27,20 @@ img {
   display: flex;
 }
 
-/* Chat List */
+/** Chat List */
 .chat-list {
   width: 35%;
   height: 100%;
 }
 
 .chat-list__header {
-  height: 10%;
+  height: 5%;
   background-color: #eaeaea;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px;
+  padding: 30px 10px;
 }
 
 .user-profile {
@@ -60,8 +60,9 @@ img {
 }
 
 .chat-list__alert {
-  height: 8%;
-  padding: 5px;
+  height: 5%;
+  min-height: 50px;
+  padding: 10px;
 
   display: flex;
   align-items: center;
@@ -94,7 +95,8 @@ img {
 }
 
 .chat-list__input {
-  height: 7%;
+  height: 5%;
+  min-height: 50px;
   padding: 5px;
   background-color: #fafafa;
 
@@ -103,14 +105,14 @@ img {
 }
 
 .chat-list__chats {
-  height: 75%;
+  height: 85%;
   background-color: #fff;
 
   overflow: auto;
 }
 
 .chat-preview {
-  height: 70px;
+  min-height: 70px;
   padding: 5px;
   border-bottom: 1px solid #ebe8e8;
 
@@ -128,6 +130,7 @@ img {
 .chat-preview img {
   width: 50px;
   border-radius: 50%;
+  margin-right: 5px;
 }
 
 .chat-preview__text span {
@@ -143,15 +146,15 @@ img {
   background-color: #e4e4e4;
 }
 
-/* Active Chat */
+/** Active Chat */
 .active-chat {
   width: 65%;
   height: 100%;
 }
 
 .active-chat__header {
-  height: 10%;
-  padding: 5px;
+  height: 5%;
+  padding: 30px 10px;
   background-color: #eaeaea;
   border-left: 1px solid lightgray;
 
@@ -193,14 +196,14 @@ img {
 }
 
 .active-chat__body {
-  height: 80%;
+  height: 90%;
   background-image: url(../img/chat_bg.jpg);
   padding: 20px 40px;
   overflow: auto;
 }
 
 .active-chat__footer {
-  height: 10%;
+  height: 5%;
   background-color: #f3eeea;
 
   display: flex;
