feat: add msg for empty chat (remove when new msg)

--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,10 @@ img {
   background-color: #ffffff;
 }
 
+.message.no-messages {
+  background-color: #cccccc;
+}
+
 .msg-time {
   font-size: 0.7rem;
   color: gray;
